<resources>
    <string name="app_name">Nasa Images</string>

    <!--Main Activity-->
    <string name="apod_title">APOD</string>
    <string name="apod_description">Astronomy Picture of the Day</string>

    <string name="rovers_title">Mars Rover Photos</string>
    <string name="rovers_description">Image data gathered by NASA\'s Curiosity, Opportunity, and Spirit rovers on Mars</string>

    <string name="library_title">NASA Image Library</string>
    <string name="library_description">Access to the NASA Image Library site at images.nasa.gov</string>

    <string name="more_info">More info</string>
    <string name="less_info">Less info</string>

    <!--Details Fragment-->
    <string name="btn_set_wallpaper">Set as wallpaper</string>
    <string name="btn_download_image">Download image</string>

    <!--Library Form Fragment-->
    <string name="text_input_hint">Search for</string>
    <string name="text_view_year">Narrow by year</string>
    <string name="btn_search">Search</string>

    <!--Library Fragment-->
    <string name="btn_previous">Previous</string>
    <string name="btn_next">Next</string>

    <!--Library Details Fragment-->
    <string name="text_view_center">Center: </string>
    <string name="text_view_keywords">Keywords</string>

    <!--Main Menu-->
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!--Settings -->
    <string name="theme_key">Theme Key</string>
    <string name="theme">Theme</string>
    <string name="system_default">System default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>

    <!-- Rover Details Fragment -->
    <string name="text_view_sol">Martian sol</string>
    <string name="text_view_camera">Camera</string>
    <string name="text_view_status">Rover status</string>

    <!-- Rover Fragment -->
    <string name="text_view_select_rover">Select a rover</string>
    <string name="latest_photos">Latest photos</string>
    <string name="filter_photos">Filter photos</string>
    <string name="filter_by_camera">Filtering by camera</string>
    <string name="select_camera">Select a camera</string>
    <string name="earth_date">Earth date</string>
</resources>