<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                android:layout_margin="20dp"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/primary_nasa"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:id="@+id/radio_group_theme">

                <RadioButton
                    android:id="@+id/radio_button_system"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/system_default"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColor"/>

                <RadioButton
                    android:id="@+id/radio_button_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/light"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColor"/>

                <RadioButton
                    android:id="@+id/radio_button_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dark"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColor"/>

            </RadioGroup>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:theme="@style/Divider"
                android:layout_marginVertical="20dp"/>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>