<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rovers.fragments.RoverFormFragment"
    android:id="@+id/root_rover_form">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:animateLayoutChanges="true">

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/dropdown_menu_rover"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/text_view_select_rover"
               android:layout_margin="20dp">

               <AutoCompleteTextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="none"
                   style="@style/Widget.AppCompat.AutoCompleteTextView"
                   android:id="@+id/autocomplete_rover"/>

           </com.google.android.material.textfield.TextInputLayout>

           <RadioGroup
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginHorizontal="20dp"
               android:checkedButton="@id/radio_button_latest">

               <RadioButton
                   android:id="@+id/radio_button_latest"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/latest_photos"
                   android:textAppearance="?attr/textAppearanceBody2"
                   android:textColor="?android:attr/textColor"/>

               <RadioButton
                   android:id="@+id/radio_button_filter"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/filter_photos"
                   android:textAppearance="?attr/textAppearanceBody2"
                   android:textColor="?android:attr/textColor"/>

           </RadioGroup>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:id="@+id/layout_filtering"
               android:visibility="gone"
               android:animateLayoutChanges="true">

               <CheckBox
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/filter_by_camera"
                   android:layout_marginHorizontal="20dp"
                   android:layout_marginTop="20dp"
                   android:id="@+id/check_box_camera"
                   android:textAppearance="?attr/textAppearanceBody2"
                   android:textColor="?android:attr/textColor"/>

               <com.google.android.material.textfield.TextInputLayout
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/select_camera"
                   android:layout_marginHorizontal="20dp"
                   android:id="@+id/dropdown_menu_camera"
                   android:enabled="false">

                   <AutoCompleteTextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="none"
                       style="@style/Widget.AppCompat.AutoCompleteTextView"
                       android:id="@+id/autocomplete_camera"
                       android:textSize="16sp"/>

               </com.google.android.material.textfield.TextInputLayout>

               <RadioGroup
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginHorizontal="20dp"
                   android:layout_marginTop="30dp"
                   android:checkedButton="@id/radio_button_sol">

                   <RadioButton
                       android:id="@+id/radio_button_sol"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/text_view_sol"
                       android:textAppearance="?attr/textAppearanceBody2"
                       android:textColor="?android:attr/textColor"/>

                   <RadioButton
                       android:id="@+id/radio_button_earth"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/earth_date"
                       android:textAppearance="?attr/textAppearanceBody2"
                       android:textColor="?android:attr/textColor"/>

               </RadioGroup>

               <com.google.android.material.slider.Slider
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginHorizontal="20dp"
                   android:layout_marginBottom="10dp"
                   android:layout_marginTop="20dp"
                   android:stepSize="1"
                   android:value="0.0"
                   android:valueFrom="0.0"
                   android:valueTo="5000.0"
                   android:theme="@style/Slider"
                   android:id="@+id/slider_sol"/>

               <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginHorizontal="20dp"
                   android:hint="@string/text_view_sol"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                   android:layout_marginBottom="30dp"
                   android:id="@+id/input_sol_layout">

                   <com.google.android.material.textfield.TextInputEditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:maxLines="1"
                       android:singleLine="true"
                       android:imeOptions="actionDone"
                       style="@style/Widget.AppCompat.AutoCompleteTextView"
                       android:id="@+id/input_sol"
                       android:inputType="number"/>

               </com.google.android.material.textfield.TextInputLayout>

               <DatePicker
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:datePickerMode="spinner"
                   android:theme="@style/AppTheme.Picker"
                   android:calendarViewShown="false"
                   android:id="@+id/date_picker_earth"
                   android:visibility="gone"/>

           </LinearLayout>

           <com.google.android.material.button.MaterialButton
               android:layout_width="match_parent"
               android:layout_height="70dp"
               android:text="@string/btn_search"
               android:layout_margin="20dp"
               app:cornerRadius="8dp"
               android:id="@+id/btn_search_rover"/>

       </LinearLayout>

   </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>