<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".library.fragments.LibraryDetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.card.MaterialCardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                card_view:cardElevation="0dp"
                android:id="@+id/library_card_detail">

                <!--<ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:id="@+id/library_image_view"/>-->

                <com.jsibbold.zoomage.ZoomageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="400dp"
                    app:zoomage_restrictBounds="false"
                    app:zoomage_animateOnReset="true"
                    app:zoomage_autoResetMode="UNDER"
                    app:zoomage_autoCenter="true"
                    app:zoomage_zoomable="true"
                    app:zoomage_translatable="true"
                    app:zoomage_minScale="1"
                    app:zoomage_maxScale="3"
                    android:id="@+id/library_image_view"
                    android:scaleType="centerCrop"/>

                <!--<CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:background="@android:color/transparent"
                    android:layout_gravity="end|bottom"
                    android:button="@drawable/checkbox"
                    android:theme="@style/CheckBox"
                    android:layout_marginEnd="-10dp"
                    android:id="@+id/library_check"/>-->

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <CheckBox
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:button="@drawable/checkbox"
                    android:layout_marginEnd="16dp"
                    android:buttonTint="@color/primary_nasa"
                    android:layout_marginTop="1dp"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_share_24"
                    android:background="?attr/selectableItemBackgroundBorderless"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/library_title"
                android:textAppearance="?attr/textAppearanceHeadline6"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_center"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColor"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/library_center"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColor"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAlignment="viewEnd"
                    android:id="@+id/library_date"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColor"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_keywords"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="?android:attr/textColor"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:id="@+id/library_description"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColor"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/btn_set_wallpaper"
                android:id="@+id/btn_set_wallpaper_library"
                android:layout_marginVertical="20dp"
                app:cornerRadius="8dp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/btn_download_image"
                android:layout_marginBottom="20dp"
                android:id="@+id/btn_download_wallpaper_library"
                app:cornerRadius="8dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>